# GradientQL

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  screenshots.yml
config/: api_key.local.example  settings.dvga.yaml  settings.yaml
docker/: docker-compose.yml  dvga.Dockerfile
docs/: CONFIGURATION.md  docker.md  results.md
gradientql/: __main__.py  tui.py
gradientql/assets/: logo.ans
gradientql/core/: config.py  llm.py  rag.py
gradientql/scanner/: __init__.py  __main__.py  arsenal_tools.py  checkpoint.py  cli.py  coverage.py  fingerprint.py  harvest.py  loop.py  memory.py  payloads.py  prevalidate.py  prompt.py  run.py  schema.py  senses.py  tracer.py
gradientql/scanner/actions/: __init__.py  arsenal.py  authmatrix.py  context.py  fuzz.py  graphql.py  recon.py
gradientql/utils/: apq.py  clairvoyance.py  deferprobe.py  engine_fingerprint.py  gqlws.py  graphql_client.py  graphql_dos.py  interactsh.py  jwt_attacks.py  logger.py  misconfig.py  oob.py  racer.py  reporter.py  request_smuggler.py  tempmail.py
notebooks/: gradientql_dvga.ipynb
scripts/: generate_comparison_chart.py  generate_screenshots.py
tests/: conftest.py  test_apq.py  test_clairvoyance.py  test_cli.py  test_config_api_key.py  test_deferprobe.py  test_engine_fingerprint.py  test_gqlws.py  test_graphql_client.py  test_interactsh.py  test_jwt_attacks.py  test_llm_cache.py  test_misconfig.py  test_oob.py  test_racer.py  test_scanner_actions.py  test_scanner_arsenal_tools.py  test_scanner_authmatrix.py  test_scanner_checkpoint.py  test_scanner_coverage.py  test_scanner_fingerprint.py  test_scanner_fixes.py  test_scanner_fuzz.py  test_scanner_harvest.py  test_scanner_integration.py  test_scanner_loop.py  test_scanner_memory.py  test_scanner_payloads.py  test_scanner_plan.py  test_scanner_prevalidate.py  test_scanner_prompt.py  test_scanner_schema.py  test_scanner_senses.py  test_scanner_tracer.py  test_tui.py
